'Привязка модальных окон к нопкам 'Заявка на замер' , 'Заказать расчет '

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="build/tabs/carousel-18/css/carousel.css">
     <link rel="stylesheet" href="build/sliders/slider_sertificates/slick-1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="build/sliders/slider_sertificates/slick-1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="build/tabs/tabs_production-block/tab_production.css">
+    <link rel="stylesheet" type="text/css" href="build/sliders/slider_sertificates/slick-1.8.1/slick/sertificates_slider.css">
+    <link rel="stylesheet" type="text/css" href="build/sliders/slider_sertificates/slider_css/sertificate.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <title>Document</title>
   <body> 
@@ -33,8 +37,8 @@
           </li>
         </ul>
         <div class="nav__offer-measurement">
-          <div class="request-for-measurement-block"><img class="request-for-measurement-img" src="build/img/header/order-payment-icon.svg" alt=""><a class="request-for-measurement" href="../../../pages/call_measurer_home.html">Заявка на замер</a></div>
-          <div class="order-payment-block"><img class="order-payment-img" src="build/img/header/request-for-measurement-icon.svg" alt=""><a class="order-payment" href="../../../pages/order_payment.html">Заказать расчет</a></div>
+          <div class="request-for-measurement-block"><img class="request-for-measurement-img" src="build/img/header/order-payment-icon.svg" alt=""><a class="request-for-measurement" href="#">Заявка на замер</a></div>
+          <div class="order-payment-block"><img class="order-payment-img" src="build/img/header/request-for-measurement-icon.svg" alt=""><a class="order-payment" href="#">Заказать расчет</a></div>
         </div>
       </nav>
     </header>
@@ -148,7 +152,37 @@
             <path d="M3.75862 13.8878H7.89655" stroke="#FEFEFE" stroke-width="1.36667" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
             <path d="M13.4138 13.1982H18.2414" stroke="#FEFEFE" stroke-width="1.36667" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
             <path d="M13.4138 15.2672H18.2414" stroke="#FEFEFE" stroke-width="1.36667" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-          </svg><a class="offer-calc" href="pages/order_payment.html">Заказать расчет</a>
+          </svg><a class="offer-calc" href="#">Заказать расчет</a>
+        </div>
+      </div>
+      <div class="order_payment__background">
+        <div class="order_payment"> 
+          <svg class="order_payment__close" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewbox="0 0 23 23" fill="none">
+            <path d="M21.75 1.14355L1.25 21.6436M1.25 1.14355L21.75 21.6436" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
+          <div class="order_payment__wrap">
+            <div class="offer-calc-block">
+              <svg class="order_payment-pic" xmlns="http://www.w3.org/2000/svg" width="33" height="30" viewbox="0 0 33 30" fill="none">
+                <path d="M31.5 1.8457H1.5V28.7423H31.5V1.8457Z" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M15.9827 15.2939V28.7422" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M1.5 15.2939H30.4655" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M8.74146 19.4319V24.6043" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M5.63794 21.5007H11.8448" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M20.1206 20.4663H27.362" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                <path d="M20.1206 23.5698H27.362" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+              <p class="offer-calc-headline">Заказать расчет</p>
+            </div>
+            <div class="order_payment__form"> 
+              <input class="order_payment__input" type="text" name="" placeholder="Ваше имя">
+              <input class="order_payment__input" type="text" name="" placeholder="Номер телефона">
+              <input class="order_payment__input" type="text" name="" placeholder="E-mail">
+            </div>
+            <div class="contacts__checkbox-block">
+              <input class="checkbox-modify" type="checkbox" name="policy" placeholder="E-mail" value="">
+              <label class="contacts__checkbox" for="policy">Я согласен(на) на обработку <a class="policy_confidential" href="#" >персональных данных</span></label>
+            </div><a class="contacts__offer-calc" href="post">Заказать расчет</a>
+          </div>
         </div>
       </div>
     </div>
@@ -215,7 +249,7 @@
               <div class="about-company__information-block__content">
                 <div class="about-company__information-block">
                   <div class="about-company__information-block_how-we-work">
-                    <p class="how-we-work__headline"> Как мы работаем</p>
+                    <p class="how-we-work__headline how-we-work"> Как мы работаем</p>
                     <div class="how-we-work__block-advantages">
                       <div class="how-we-work__advantage"><img class="how-we-work__img" src="../../../build/img/about-company/how-we-work__block-advantages/car-advantage.svg" alt="car">
                         <div class="how-we-work__block-text">
@@ -289,25 +323,82 @@
               </div>
             </div>
             <div class="media-29101 d-md-flex w-100">
-              <div class="about-company__information-block__content">
-                <div class="about-company__information-block">
-                  <div class="regular slider">
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-1.png"></div>
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-2.png"></div>
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-3.png"></div>
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-4.png"></div>
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-5.png"></div>
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-1.png"></div>
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-2.png"></div>
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-3.png"></div>
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-4.png"></div>
-                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-5.png"></div>
+              <section id="slider_bl">
+                <div class="wrapper">
+                  <input id="slide1" checked="" type="radio" name="slider">
+                  <input id="slide2" type="radio" name="slider">
+                  <input id="slide3" type="radio" name="slider">
+                  <input id="slide4" type="radio" name="slider">
+                  <div class="slider-wrapper">
+                    <div class="inner">
+                      <article>
+                        <div class="info top-left"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 63.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 64.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 65.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 66.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 67.png"></div>
+                      </article>
+                      <article>
+                        <div class="info bottom-right"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 63.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 64.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 65.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 66.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 67.png"></div>
+                      </article>
+                      <article>
+                        <div class="info bottom-left"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 63.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 64.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 65.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 66.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 67.png"></div>
+                      </article>
+                      <article>
+                        <div class="info top-right"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 63.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 64.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 65.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 66.png"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 67.png"></div>
+                      </article>
+                      <article>
+                        <div class="info top-right"><img class="sertificate-img" src="../../../../build/img/certificates/Rectangle 67.png"></div>
+                      </article>
+                    </div>
+                    <div class="slider-prev-next-control">
+                      <label for="slide1"></label>
+                      <label for="slide2"></label>
+                      <label for="slide3"></label>
+                      <label for="slide4"></label>
+                    </div>
+                    <div class="slider-dot-control">
+                      <label for="slide1"></label>
+                      <label for="slide2"></label>
+                      <label for="slide3"></label>
+                      <label for="slide4"></label>
+                    </div>
                   </div>
                 </div>
-              </div>
+              </section>
             </div>
           </div>
-          <div class="advantage-block-link"><img class="link-advantage-img" src="build/img/about-company/advantages/link-advance-icon.svg" alt="advance-link"><a class="link-advantage" href="pages/call_measurer_home.html">Оформить заявку на замер</a></div>
+          <div class="advantage-block-link"><img class="link-advantage-img" src="build/img/about-company/advantages/link-advance-icon.svg" alt="advance-link"><a class="link-advantage" href="#">Оформить заявку на замер</a></div>
+        </div>
+        <div class="call-measurer-home__background">
+          <div class="call-measurer-home"> 
+            <svg class="call-measurer-home__cross" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewbox="0 0 23 23" fill="none">
+              <path d="M21.75 1.14355L1.25 21.6436M1.25 1.14355L21.75 21.6436" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            </svg>
+            <div class="call-measurer-home__wrap">
+              <div class="offer-calc-block">
+                <svg class="call-measurer-home-pic" xmlns="http://www.w3.org/2000/svg" width="33" height="30" viewbox="0 0 33 30" fill="none">
+                  <path d="M31.75 12.9568H1.75V28.5123H31.75V12.9568Z" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M6.19458 12.9568V21.8457" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M11.75 12.9568V16.2901" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M16.1945 12.9568V21.8457" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M21.75 12.9568V16.2901" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M26.1943 12.9568V21.8457" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M1.75 12.9568V1.8457" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M31.75 14.0679V1.8457" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M1.75 5.17896H31.75" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M6.19444 1.8457L1.75 5.17904L6.19444 8.51237" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M26.1943 1.8457L31.7499 5.17904L26.1943 8.51237" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+                <p class="offer-calc-headline">Вызвать замерщика на дом</p>
+              </div>
+              <div class="order_payment__form"> 
+                <input class="order_payment__input" type="text" name="" placeholder="Ваше имя">
+                <input class="order_payment__input" type="text" name="" placeholder="Номер телефона">
+                <input class="order_payment__input" type="text" name="" placeholder="E-mail">
+              </div>
+              <div class="contacts__checkbox-block">
+                <input class="checkbox-modify" type="checkbox" name="policy" placeholder="E-mail" value="">
+                <label class="contacts__checkbox" for="policy">Я согласен(на) на обработку <a class="call-measurer-home__policy_confidential" href="#" >персональных данных</span></label>
+              </div><a class="call-measurer-home__offer-calc" href="POST">Отправить заявку</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -440,15 +531,7 @@
     <script src="build/tabs/carousel-18/js/owl.carousel.min.js"></script>
     <script src="build/tabs/carousel-18/js/main.js"></script>
     <script src="build/sliders/slider_sertificates/slick-1.8.1/slick/slick.js"></script>
-    <script type="text/javascript">
-      $(document).on('ready',function () {
-      $(".regular").slick({
-      dots: true,
-      infinite: true,
-      slidesToShow: 1,
-      slidesToScroll: 1
-      });
-      });
-    </script>
+    <script src="build/sliders/slider_sertificates/slick-1.8.1/slick/sertificates.js"></script>
+    <script src="build/js/pop_up_call-measurer-home.js"></script>
   </body>
 </html>
