правка скриптов модальных окон

--- a/index.html
+++ b/index.html
@@ -38,7 +38,37 @@
         </ul>
         <div class="nav__offer-measurement">
           <div class="request-for-measurement-block"><img class="request-for-measurement-img" src="build/img/header/order-payment-icon.svg" alt=""><a class="request-for-measurement" href="#">Заявка на замер</a></div>
-          <div class="order-payment-block"><img class="order-payment-img" src="build/img/header/request-for-measurement-icon.svg" alt=""><a class="order-payment" href="#">Заказать расчет</a></div>
+          <div class="order-payment-block-header"><img class="order-payment-img" src="build/img/header/request-for-measurement-icon.svg" alt=""><a class="order-payment" href="#">Заказать расчет</a></div>
+        </div>
+        <div class="order-payment__background-header">
+          <div class="order_payment"> 
+            <svg class="order-payment__close-header" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewbox="0 0 23 23" fill="none">
+              <path d="M21.75 1.14355L1.25 21.6436M1.25 1.14355L21.75 21.6436" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            </svg>
+            <div class="order_payment__wrap">
+              <div class="offer-calc-block">
+                <svg class="order_payment-pic" xmlns="http://www.w3.org/2000/svg" width="33" height="30" viewbox="0 0 33 30" fill="none">
+                  <path d="M31.5 1.8457H1.5V28.7423H31.5V1.8457Z" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M15.9827 15.2939V28.7422" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M1.5 15.2939H30.4655" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M8.74146 19.4319V24.6043" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M5.63794 21.5007H11.8448" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M20.1206 20.4663H27.362" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M20.1206 23.5698H27.362" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+                <p class="offer-calc-headline">Заказать расчет</p>
+              </div>
+              <div class="order_payment__form"> 
+                <input class="order_payment__input" type="text" name="" placeholder="Ваше имя">
+                <input class="order_payment__input" type="text" name="" placeholder="Номер телефона">
+                <input class="order_payment__input" type="text" name="" placeholder="E-mail">
+              </div>
+              <div class="contacts__checkbox-block">
+                <input class="checkbox-modify" type="checkbox" name="policy" placeholder="E-mail" value="">
+                <label class="contacts__checkbox" for="policy">Я согласен(на) на обработку <a class="policy_confidential" href="#" >персональных данных</span></label>
+              </div><a class="contacts__offer-calc" href="post">Заказать расчет</a>
+            </div>
+          </div>
         </div>
       </nav>
     </header>
@@ -154,34 +184,34 @@
             <path d="M13.4138 15.2672H18.2414" stroke="#FEFEFE" stroke-width="1.36667" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg><a class="offer-calc" href="#">Заказать расчет</a>
         </div>
-      </div>
-      <div class="order_payment__background">
-        <div class="order_payment"> 
-          <svg class="order_payment__close" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewbox="0 0 23 23" fill="none">
-            <path d="M21.75 1.14355L1.25 21.6436M1.25 1.14355L21.75 21.6436" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-          </svg>
-          <div class="order_payment__wrap">
-            <div class="offer-calc-block">
-              <svg class="order_payment-pic" xmlns="http://www.w3.org/2000/svg" width="33" height="30" viewbox="0 0 33 30" fill="none">
-                <path d="M31.5 1.8457H1.5V28.7423H31.5V1.8457Z" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                <path d="M15.9827 15.2939V28.7422" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                <path d="M1.5 15.2939H30.4655" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                <path d="M8.74146 19.4319V24.6043" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                <path d="M5.63794 21.5007H11.8448" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                <path d="M20.1206 20.4663H27.362" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                <path d="M20.1206 23.5698H27.362" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-              </svg>
-              <p class="offer-calc-headline">Заказать расчет</p>
+        <div class="order_payment__background">
+          <div class="order_payment"> 
+            <svg class="order_payment__close" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewbox="0 0 23 23" fill="none">
+              <path d="M21.75 1.14355L1.25 21.6436M1.25 1.14355L21.75 21.6436" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            </svg>
+            <div class="order_payment__wrap">
+              <div class="offer-calc-block-modal">
+                <svg class="order_payment-pic" xmlns="http://www.w3.org/2000/svg" width="33" height="30" viewbox="0 0 33 30" fill="none">
+                  <path d="M31.5 1.8457H1.5V28.7423H31.5V1.8457Z" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M15.9827 15.2939V28.7422" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M1.5 15.2939H30.4655" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M8.74146 19.4319V24.6043" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M5.63794 21.5007H11.8448" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M20.1206 20.4663H27.362" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                  <path d="M20.1206 23.5698H27.362" stroke="#FEFEFE" stroke-width="2" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+                <p class="offer-calc-headline">Заказать расчет</p>
+              </div>
+              <div class="order_payment__form"> 
+                <input class="order_payment__input" type="text" name="" placeholder="Ваше имя">
+                <input class="order_payment__input" type="text" name="" placeholder="Номер телефона">
+                <input class="order_payment__input" type="text" name="" placeholder="E-mail">
+              </div>
+              <div class="contacts__checkbox-block">
+                <input class="checkbox-modify" type="checkbox" name="policy" placeholder="E-mail" value="">
+                <label class="contacts__checkbox" for="policy">Я согласен(на) на обработку <a class="policy_confidential" href="#" >персональных данных</span></label>
+              </div><a class="contacts__offer-calc" href="post">Заказать расчет</a>
             </div>
-            <div class="order_payment__form"> 
-              <input class="order_payment__input" type="text" name="" placeholder="Ваше имя">
-              <input class="order_payment__input" type="text" name="" placeholder="Номер телефона">
-              <input class="order_payment__input" type="text" name="" placeholder="E-mail">
-            </div>
-            <div class="contacts__checkbox-block">
-              <input class="checkbox-modify" type="checkbox" name="policy" placeholder="E-mail" value="">
-              <label class="contacts__checkbox" for="policy">Я согласен(на) на обработку <a class="policy_confidential" href="#" >персональных данных</span></label>
-            </div><a class="contacts__offer-calc" href="post">Заказать расчет</a>
           </div>
         </div>
       </div>
@@ -532,6 +562,6 @@
     <script src="build/tabs/carousel-18/js/main.js"></script>
     <script src="build/sliders/slider_sertificates/slick-1.8.1/slick/slick.js"></script>
     <script src="build/sliders/slider_sertificates/slick-1.8.1/slick/sertificates.js"></script>
-    <script src="build/js/pop_up_call-measurer-home.js"></script>
+    <script src="build/js/pop_up.js"></script>
   </body>
 </html>
