Добавил модальные окна для блоков- 'установка пластиковых окон' и ' остекление лоджий'

--- a/pages/pop-ups/pop-up-2.html
+++ b/pages/pop-ups/pop-up-2.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../../../../build/css/pages/pop-up-1.css">
   </head>
   <body> 
-    <div class="pop-up"> 
-      <svg class="pop-up__cross" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewbox="0 0 23 23" fill="none">
+    <div class="pop-up-2"> 
+      <svg class="pop-up-2__close" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewbox="0 0 23 23" fill="none">
         <path d="M21.75 1.14355L1.25 21.6436M1.25 1.14355L21.75 21.6436" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
       </svg>
       <div class="pop-up__wrap"> 
