--- a/index.html
+++ b/index.html
@@ -1129,9 +1129,9 @@
               </div>
               <div class="slider offers__slider" id="offers_one">
                 <div class="slider__container">
-                  <div class="slider__item"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-1.png" alt="room"></a></div>
-                  <div class="slider__item"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-2.png" alt="room"></a></div>
-                  <div class="slider__item"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-3.png" alt="room"></a></div>
+                  <div class="slider__item"><a href="#"> <img class="portfolio-img" src="build/img/portfolio/room-1.png" alt="room"></a></div>
+                  <div class="slider__item"><a href="#"> <img class="portfolio-img" src="build/img/portfolio/room-2.png" alt="room"></a></div>
+                  <div class="slider__item"><a href="#"> <img class="portfolio-img" src="build/img/portfolio/room-3.png" alt="room"></a></div>
                   <div class="slider__item"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-4.png" alt="room"></a></div>
                   <div class="slider__item"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-1.png" alt="room"></a></div>
                   <div class="slider__item"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-2.png" alt="room"></a></div>
@@ -1151,6 +1151,80 @@
         </div>
         <div class="portfolio__map">
           <script type="text/javascript" charset="utf-8" async="" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa4a267c8851c198863d0993e46310246122490a082e0c923842e222152e00149&amp;width=100%25&amp;height=311&amp;lang=ru_RU&amp;scroll=true"></script>
+        </div>
+      </div>
+      <div class="pop-up-portfolio__background"> 
+        <div class="pop-up-portfolio"> 
+          <div class="pop-up-portfolio__close"> 
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 18 18" fill="none">
+              <path d="M1.25 1.02661L17.25 17.0266" stroke="black" stroke-width="2"></path>
+              <path d="M1.25 1.02661L17.25 17.0266" stroke="black" stroke-width="2"></path>
+            </svg>
+          </div>
+          <div class="pop-up-portfolio__wrap">
+            <div class="pop-up-portfolio__block-info">
+              <div class="pop-up-portfolio__img-block"> <img src="../../../../build/img/pop-ups/pop-up-portfolio/Rectangle 20.png" alt=""></div>
+              <div class="pop-up-portfolio__main-block-text"> 
+                <div class="pop-up-portfolio__block-address">
+                  <div class="pop-up-portfolio__data">08.10.2021</div>
+                  <div class="pop-up-portfolio__location">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="31" height="40" viewbox="0 0 31 40" fill="none">
+                      <g clip-path="url(#clip0_347_685)">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M14.6236 0.435669C22.8054 0.435669 30.0781 6.7993 30.0781 14.9811C30.0781 23.1629 19.169 38.6175 14.6236 38.6175C10.9872 38.6175 0.078125 23.1629 0.078125 14.9811C0.078125 6.7993 6.44176 0.435669 14.6236 0.435669V0.435669Z" fill="#EF7F1A"></path>
+                        <path d="M14.6236 27.7084C21.1506 27.7084 26.4418 22.4172 26.4418 15.8902C26.4418 9.3632 21.1506 4.07202 14.6236 4.07202C8.0966 4.07202 2.80542 9.3632 2.80542 15.8902C2.80542 22.4172 8.0966 27.7084 14.6236 27.7084Z" fill="#FEFEFE"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M21.8964 12.2539H16.4418L12.8054 9.52661L10.0782 11.3448V10.4357H8.25999V13.163L5.53271 14.9812H8.25999V21.3448H21.8964V14.9812H24.6236L21.8964 12.2539ZM16.4418 14.9812H20.9873V20.4357H16.4418V14.9812ZM12.8054 11.3448L16.4418 14.0721H9.16908L12.8054 11.3448ZM10.0782 14.9812H15.5327V20.4357H10.0782V14.9812Z" fill="#EF7F1A"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M21.8964 12.2539H16.4418L12.8054 9.52661L10.0782 11.3448V10.4357H8.25999V13.163L5.53271 14.9812H21.8964H24.6236L21.8964 12.2539ZM12.8054 11.3448L16.4418 14.0721H9.16908L12.8054 11.3448Z" fill="#5B5B5B"></path>
+                      </g>
+                      <defs>
+                        <clippath id="clip0_347_685"></clippath>
+                        <rect width="30" height="39" fill="white" transform="translate(0.078125 0.0266113)"></rect>
+                      </defs>
+                    </svg>
+                  </div>
+                  <div class="pop-up-portfolio__street">г Иваново, ул Ташкентская, д 4 к 1</div>
+                </div>
+                <div class="pop-up-portfolio__block-service">
+                  <div class="pop-up-portfolio__service-text">Монтаж окна и балконного блока</div>
+                  <div class="pop-up-portfolio__block-text">
+                    <div class="pop-up-portfolio__service-text-2">  Что делали</div>
+                    <div class="pop-up-portfolio__service-text-3"> Профильная система Rehau Blitz Фурнитура Roto NT </div>
+                  </div>
+                  <div class="pop-up-portfolio__block-text">
+                    <div class="pop-up-portfolio__service-text-2">  Категории объекта:</div>
+                    <div class="pop-up-portfolio__service-text-3">  Окна Балконный блок</div>
+                  </div>
+                  <div class="pop-up-portfolio__block-cost">
+                    <div class="pop-up-portfolio__offer-measurement-block"> 
+                      <svg xmlns="http://www.w3.org/2000/svg" width="23" height="20" viewbox="0 0 23 20" fill="none">
+                        <path d="M21.2925 8.29114H1.29248V18.6615H21.2925V8.29114Z" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M4.25549 8.29114V14.2171" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M7.95911 8.29114V10.5134" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M10.9221 8.29114V14.2171" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M14.6259 8.29114V10.5134" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M17.5887 8.29114V14.2171" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M1.29248 8.2912V0.883789" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M21.2925 9.03194V0.883789" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M1.29248 3.10596H21.2925" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M4.25544 0.883789L1.29248 3.10601L4.25544 5.32823" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M17.5887 0.883789L21.2924 3.10601L17.5887 5.32823" stroke="#FEFEFE" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                      </svg><a class="pop-up-portfolio__offer-measurement" href="">Заявка на замер</a>
+                    </div>
+                    <div class="pop-up-portfolio__cost-request-block">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="31" height="21" viewbox="0 0 31 21" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M11 19.3123H25.2857C28.1429 19.3123 29.5714 17.8837 29.5714 15.0266V5.02656C29.5714 3.59799 28.1429 0.740845 25.2857 0.740845H11C9.57143 0.740845 7.625 1.90161 6.71429 3.59799C3.5625 4.33911 0.9375 6.3034 0.9375 10.5891C0.9375 13.4463 3.85714 16.4551 6.71429 16.4551C8.14286 17.8837 9.57143 19.3123 11 19.3123Z" stroke="#EF7F1A" stroke-width="1.42857" stroke-miterlimit="22.9256"></path>
+                        <path d="M7.95541 13.223C9.53337 13.223 10.8126 11.9438 10.8126 10.3658C10.8126 8.78785 9.53337 7.50867 7.95541 7.50867C6.37745 7.50867 5.09827 8.78785 5.09827 10.3658C5.09827 11.9438 6.37745 13.223 7.95541 13.223Z" stroke="#EF7F1A" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M16.7142 15.0266V5.02661C16.7142 5.02661 20.4285 5.02661 20.4285 7.88375C20.4285 10.7409 17.1428 10.7409 17.1428 10.7409" stroke="#EF7F1A" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M15.2858 13.598H18.5715" stroke="#EF7F1A" stroke-width="1.42857" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                      </svg><a class="pop-up-portfolio__cost-request" href="">Узнать цену</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="pop-up-portfolio__map"> 
+              <script type="text/javascript" charset="utf-8" async="" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2d3cefeb276baeaa176dd389642bb0f4428fda61e046b8746642d7388977f6d1&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+            </div>
+          </div>
         </div>
       </div>
     </div>
